--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -7,7 +7,7 @@ m4trace:aclocal.m4:1218: -1- m4_include([m4/ltsugar.m4])
 m4trace:aclocal.m4:1219: -1- m4_include([m4/ltversion.m4])
 m4trace:aclocal.m4:1220: -1- m4_include([m4/lt~obsolete.m4])
 m4trace:aclocal.m4:1221: -1- m4_include([acinclude.m4])
-m4trace:configure.ac:13: -1- AC_INIT([justniffer], [0.5.15], [info@plecno.com])
+m4trace:configure.ac:13: -1- AC_INIT([justniffer], [0.5.16], [info@plecno.com])
 m4trace:configure.ac:13: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:13: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:13: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -482,259 +482,255 @@ m4trace:configure.ac:51: -1- AC_DEFINE_TRACE_LITERAL([HAVE_STDBOOL_H])
 m4trace:configure.ac:51: -1- m4_pattern_allow([^HAVE_STDBOOL_H$])
 m4trace:configure.ac:51: -1- AH_OUTPUT([HAVE_STDBOOL_H], [/* Define to 1 if stdbool.h conforms to C99. */
 @%:@undef HAVE_STDBOOL_H])
-m4trace:configure.ac:52: -1- _m4_warn([obsolete], [The macro `AC_HEADER_TIME' is obsolete.
-You should run autoupdate.], [./lib/autoconf/headers.m4:743: AC_HEADER_TIME is expanded from...
-configure.ac:52: the top level])
-m4trace:configure.ac:52: -1- AH_OUTPUT([HAVE_SYS_TIME_H], [/* Define to 1 if you have the <sys/time.h> header file. */
+m4trace:configure.ac:52: -1- _m4_warn([obsolete], [Update your code to rely only on HAVE_SYS_TIME_H,
+then remove this warning and the obsolete code below it.
+All current systems provide time.h; it need not be checked for.
+Not all systems provide sys/time.h, but those that do, all allow
+you to include it and time.h simultaneously.], [])
+m4trace:configure.ac:58: -1- AH_OUTPUT([HAVE_SYS_TIME_H], [/* Define to 1 if you have the <sys/time.h> header file. */
 @%:@undef HAVE_SYS_TIME_H])
-m4trace:configure.ac:52: -1- AC_DEFINE_TRACE_LITERAL([TIME_WITH_SYS_TIME])
-m4trace:configure.ac:52: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
-m4trace:configure.ac:52: -1- AH_OUTPUT([TIME_WITH_SYS_TIME], [/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. This
+m4trace:configure.ac:61: -1- AC_DEFINE_TRACE_LITERAL([TIME_WITH_SYS_TIME])
+m4trace:configure.ac:61: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
+m4trace:configure.ac:61: -1- AH_OUTPUT([TIME_WITH_SYS_TIME], [/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. This
    macro is obsolete. */
 @%:@undef TIME_WITH_SYS_TIME])
-m4trace:configure.ac:53: -1- AC_DEFINE_TRACE_LITERAL([TM_IN_SYS_TIME])
-m4trace:configure.ac:53: -1- m4_pattern_allow([^TM_IN_SYS_TIME$])
-m4trace:configure.ac:53: -1- AH_OUTPUT([TM_IN_SYS_TIME], [/* Define to 1 if your <sys/time.h> declares `struct tm\'. */
+m4trace:configure.ac:66: -1- AC_DEFINE_TRACE_LITERAL([TM_IN_SYS_TIME])
+m4trace:configure.ac:66: -1- m4_pattern_allow([^TM_IN_SYS_TIME$])
+m4trace:configure.ac:66: -1- AH_OUTPUT([TM_IN_SYS_TIME], [/* Define to 1 if your <sys/time.h> declares `struct tm\'. */
 @%:@undef TM_IN_SYS_TIME])
-m4trace:configure.ac:56: -1- AC_PROG_LIBTOOL
-m4trace:configure.ac:56: -1- _m4_warn([obsolete], [The macro `AC_PROG_LIBTOOL' is obsolete.
-You should run autoupdate.], [m4/libtool.m4:107: AC_PROG_LIBTOOL is expanded from...
-configure.ac:56: the top level])
-m4trace:configure.ac:56: -1- LT_INIT
-m4trace:configure.ac:56: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^(_LT_EOF|LT_DLGLOBAL|LT_DLLAZY_OR_NOW|LT_MULTI_MODULE)$])
-m4trace:configure.ac:56: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
-m4trace:configure.ac:56: -1- AC_SUBST([LIBTOOL])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([LIBTOOL])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^LIBTOOL$])
-m4trace:configure.ac:56: -1- AC_CANONICAL_HOST
-m4trace:configure.ac:56: -1- AC_CANONICAL_BUILD
-m4trace:configure.ac:56: -1- AC_REQUIRE_AUX_FILE([config.sub])
-m4trace:configure.ac:56: -1- AC_REQUIRE_AUX_FILE([config.guess])
-m4trace:configure.ac:56: -1- AC_SUBST([build], [$ac_cv_build])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([build])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^build$])
-m4trace:configure.ac:56: -1- AC_SUBST([build_cpu], [$[1]])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([build_cpu])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^build_cpu$])
-m4trace:configure.ac:56: -1- AC_SUBST([build_vendor], [$[2]])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([build_vendor])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^build_vendor$])
-m4trace:configure.ac:56: -1- AC_SUBST([build_os])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([build_os])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^build_os$])
-m4trace:configure.ac:56: -1- AC_SUBST([host], [$ac_cv_host])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([host])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^host$])
-m4trace:configure.ac:56: -1- AC_SUBST([host_cpu], [$[1]])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([host_cpu])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^host_cpu$])
-m4trace:configure.ac:56: -1- AC_SUBST([host_vendor], [$[2]])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([host_vendor])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^host_vendor$])
-m4trace:configure.ac:56: -1- AC_SUBST([host_os])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([host_os])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^host_os$])
-m4trace:configure.ac:56: -1- AC_SUBST([SED])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([SED])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^SED$])
-m4trace:configure.ac:56: -1- AC_SUBST([GREP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:56: -1- AC_SUBST([EGREP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:56: -1- AC_SUBST([FGREP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([FGREP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^FGREP$])
-m4trace:configure.ac:56: -1- AC_SUBST([GREP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:56: -1- AC_SUBST([LD])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([LD])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^LD$])
-m4trace:configure.ac:56: -1- AC_SUBST([DUMPBIN])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([DUMPBIN])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^DUMPBIN$])
-m4trace:configure.ac:56: -1- AC_SUBST([ac_ct_DUMPBIN])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([ac_ct_DUMPBIN])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^ac_ct_DUMPBIN$])
-m4trace:configure.ac:56: -1- AC_SUBST([DUMPBIN])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([DUMPBIN])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^DUMPBIN$])
-m4trace:configure.ac:56: -1- AC_SUBST([NM])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([NM])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^NM$])
-m4trace:configure.ac:56: -1- AC_SUBST([LN_S], [$as_ln_s])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([LN_S])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^LN_S$])
-m4trace:configure.ac:56: -1- AC_SUBST([OBJDUMP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([OBJDUMP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^OBJDUMP$])
-m4trace:configure.ac:56: -1- AC_SUBST([OBJDUMP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([OBJDUMP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^OBJDUMP$])
-m4trace:configure.ac:56: -1- AC_SUBST([DLLTOOL])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([DLLTOOL])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^DLLTOOL$])
-m4trace:configure.ac:56: -1- AC_SUBST([DLLTOOL])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([DLLTOOL])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^DLLTOOL$])
-m4trace:configure.ac:56: -1- AC_SUBST([AR])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([AR])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^AR$])
-m4trace:configure.ac:56: -1- AC_SUBST([ac_ct_AR])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([ac_ct_AR])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^ac_ct_AR$])
-m4trace:configure.ac:56: -1- AC_SUBST([STRIP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([STRIP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^STRIP$])
-m4trace:configure.ac:56: -1- AC_SUBST([RANLIB])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([RANLIB])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^RANLIB$])
-m4trace:configure.ac:56: -1- m4_pattern_allow([LT_OBJDIR])
-m4trace:configure.ac:56: -1- AC_DEFINE_TRACE_LITERAL([LT_OBJDIR])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^LT_OBJDIR$])
-m4trace:configure.ac:56: -1- AH_OUTPUT([LT_OBJDIR], [/* Define to the sub-directory in which libtool stores uninstalled libraries.
+m4trace:configure.ac:69: -1- LT_INIT
+m4trace:configure.ac:69: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^(_LT_EOF|LT_DLGLOBAL|LT_DLLAZY_OR_NOW|LT_MULTI_MODULE)$])
+m4trace:configure.ac:69: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:69: -1- AC_SUBST([LIBTOOL])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([LIBTOOL])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LIBTOOL$])
+m4trace:configure.ac:69: -1- AC_CANONICAL_HOST
+m4trace:configure.ac:69: -1- AC_CANONICAL_BUILD
+m4trace:configure.ac:69: -1- AC_REQUIRE_AUX_FILE([config.sub])
+m4trace:configure.ac:69: -1- AC_REQUIRE_AUX_FILE([config.guess])
+m4trace:configure.ac:69: -1- AC_SUBST([build], [$ac_cv_build])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([build])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^build$])
+m4trace:configure.ac:69: -1- AC_SUBST([build_cpu], [$[1]])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([build_cpu])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^build_cpu$])
+m4trace:configure.ac:69: -1- AC_SUBST([build_vendor], [$[2]])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([build_vendor])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^build_vendor$])
+m4trace:configure.ac:69: -1- AC_SUBST([build_os])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([build_os])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^build_os$])
+m4trace:configure.ac:69: -1- AC_SUBST([host], [$ac_cv_host])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([host])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^host$])
+m4trace:configure.ac:69: -1- AC_SUBST([host_cpu], [$[1]])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([host_cpu])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^host_cpu$])
+m4trace:configure.ac:69: -1- AC_SUBST([host_vendor], [$[2]])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([host_vendor])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^host_vendor$])
+m4trace:configure.ac:69: -1- AC_SUBST([host_os])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([host_os])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^host_os$])
+m4trace:configure.ac:69: -1- AC_SUBST([SED])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([SED])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^SED$])
+m4trace:configure.ac:69: -1- AC_SUBST([GREP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:69: -1- AC_SUBST([EGREP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([EGREP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:69: -1- AC_SUBST([FGREP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([FGREP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^FGREP$])
+m4trace:configure.ac:69: -1- AC_SUBST([GREP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:69: -1- AC_SUBST([LD])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([LD])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LD$])
+m4trace:configure.ac:69: -1- AC_SUBST([DUMPBIN])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([DUMPBIN])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^DUMPBIN$])
+m4trace:configure.ac:69: -1- AC_SUBST([ac_ct_DUMPBIN])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([ac_ct_DUMPBIN])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^ac_ct_DUMPBIN$])
+m4trace:configure.ac:69: -1- AC_SUBST([DUMPBIN])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([DUMPBIN])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^DUMPBIN$])
+m4trace:configure.ac:69: -1- AC_SUBST([NM])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([NM])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^NM$])
+m4trace:configure.ac:69: -1- AC_SUBST([LN_S], [$as_ln_s])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([LN_S])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LN_S$])
+m4trace:configure.ac:69: -1- AC_SUBST([OBJDUMP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OBJDUMP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^OBJDUMP$])
+m4trace:configure.ac:69: -1- AC_SUBST([OBJDUMP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OBJDUMP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^OBJDUMP$])
+m4trace:configure.ac:69: -1- AC_SUBST([DLLTOOL])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([DLLTOOL])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^DLLTOOL$])
+m4trace:configure.ac:69: -1- AC_SUBST([DLLTOOL])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([DLLTOOL])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^DLLTOOL$])
+m4trace:configure.ac:69: -1- AC_SUBST([AR])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([AR])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^AR$])
+m4trace:configure.ac:69: -1- AC_SUBST([ac_ct_AR])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([ac_ct_AR])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^ac_ct_AR$])
+m4trace:configure.ac:69: -1- AC_SUBST([STRIP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([STRIP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^STRIP$])
+m4trace:configure.ac:69: -1- AC_SUBST([RANLIB])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([RANLIB])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^RANLIB$])
+m4trace:configure.ac:69: -1- m4_pattern_allow([LT_OBJDIR])
+m4trace:configure.ac:69: -1- AC_DEFINE_TRACE_LITERAL([LT_OBJDIR])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LT_OBJDIR$])
+m4trace:configure.ac:69: -1- AH_OUTPUT([LT_OBJDIR], [/* Define to the sub-directory in which libtool stores uninstalled libraries.
    */
 @%:@undef LT_OBJDIR])
-m4trace:configure.ac:56: -1- LT_SUPPORTED_TAG([CC])
-m4trace:configure.ac:56: -1- AC_SUBST([MANIFEST_TOOL])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([MANIFEST_TOOL])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^MANIFEST_TOOL$])
-m4trace:configure.ac:56: -1- AC_SUBST([DSYMUTIL])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([DSYMUTIL])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^DSYMUTIL$])
-m4trace:configure.ac:56: -1- AC_SUBST([NMEDIT])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([NMEDIT])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^NMEDIT$])
-m4trace:configure.ac:56: -1- AC_SUBST([LIPO])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([LIPO])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^LIPO$])
-m4trace:configure.ac:56: -1- AC_SUBST([OTOOL])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([OTOOL])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^OTOOL$])
-m4trace:configure.ac:56: -1- AC_SUBST([OTOOL64])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([OTOOL64])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^OTOOL64$])
-m4trace:configure.ac:56: -1- AH_OUTPUT([HAVE_DLFCN_H], [/* Define to 1 if you have the <dlfcn.h> header file. */
+m4trace:configure.ac:69: -1- LT_SUPPORTED_TAG([CC])
+m4trace:configure.ac:69: -1- AC_SUBST([MANIFEST_TOOL])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([MANIFEST_TOOL])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^MANIFEST_TOOL$])
+m4trace:configure.ac:69: -1- AC_SUBST([DSYMUTIL])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([DSYMUTIL])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^DSYMUTIL$])
+m4trace:configure.ac:69: -1- AC_SUBST([NMEDIT])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([NMEDIT])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^NMEDIT$])
+m4trace:configure.ac:69: -1- AC_SUBST([LIPO])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([LIPO])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LIPO$])
+m4trace:configure.ac:69: -1- AC_SUBST([OTOOL])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OTOOL])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^OTOOL$])
+m4trace:configure.ac:69: -1- AC_SUBST([OTOOL64])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OTOOL64])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^OTOOL64$])
+m4trace:configure.ac:69: -1- AH_OUTPUT([HAVE_DLFCN_H], [/* Define to 1 if you have the <dlfcn.h> header file. */
 @%:@undef HAVE_DLFCN_H])
-m4trace:configure.ac:56: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DLFCN_H])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
-m4trace:configure.ac:56: -1- LT_SUPPORTED_TAG([CXX])
-m4trace:configure.ac:56: -1- AC_SUBST([CXXCPP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([CXXCPP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^CXXCPP$])
-m4trace:configure.ac:56: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:56: -1- AC_SUBST([CXXCPP])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([CXXCPP])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^CXXCPP$])
-m4trace:configure.ac:56: -1- AC_SUBST([LD])
-m4trace:configure.ac:56: -1- AC_SUBST_TRACE([LD])
-m4trace:configure.ac:56: -1- m4_pattern_allow([^LD$])
-m4trace:configure.ac:57: -2- AC_DEFINE_TRACE_LITERAL([HAVE_LIB_PCAP])
-m4trace:configure.ac:57: -2- m4_pattern_allow([^HAVE_LIB_PCAP$])
-m4trace:configure.ac:59: -1- AC_SUBST([BOOST_CPPFLAGS])
-m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_CPPFLAGS])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_CPPFLAGS$])
-m4trace:configure.ac:59: -1- AC_SUBST([BOOST_LDFLAGS])
-m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_LDFLAGS])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_LDFLAGS$])
-m4trace:configure.ac:59: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^HAVE_BOOST$])
-m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_BOOST], [/* define if the Boost library is available */
+m4trace:configure.ac:69: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DLFCN_H])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^HAVE_DLFCN_H$])
+m4trace:configure.ac:69: -1- LT_SUPPORTED_TAG([CXX])
+m4trace:configure.ac:69: -1- AC_SUBST([CXXCPP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([CXXCPP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:69: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:69: -1- AC_SUBST([CXXCPP])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([CXXCPP])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:69: -1- AC_SUBST([LD])
+m4trace:configure.ac:69: -1- AC_SUBST_TRACE([LD])
+m4trace:configure.ac:69: -1- m4_pattern_allow([^LD$])
+m4trace:configure.ac:70: -2- AC_DEFINE_TRACE_LITERAL([HAVE_LIB_PCAP])
+m4trace:configure.ac:70: -2- m4_pattern_allow([^HAVE_LIB_PCAP$])
+m4trace:configure.ac:72: -1- AC_SUBST([BOOST_CPPFLAGS])
+m4trace:configure.ac:72: -1- AC_SUBST_TRACE([BOOST_CPPFLAGS])
+m4trace:configure.ac:72: -1- m4_pattern_allow([^BOOST_CPPFLAGS$])
+m4trace:configure.ac:72: -1- AC_SUBST([BOOST_LDFLAGS])
+m4trace:configure.ac:72: -1- AC_SUBST_TRACE([BOOST_LDFLAGS])
+m4trace:configure.ac:72: -1- m4_pattern_allow([^BOOST_LDFLAGS$])
+m4trace:configure.ac:72: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST])
+m4trace:configure.ac:72: -1- m4_pattern_allow([^HAVE_BOOST$])
+m4trace:configure.ac:72: -1- AH_OUTPUT([HAVE_BOOST], [/* define if the Boost library is available */
 @%:@undef HAVE_BOOST])
-m4trace:configure.ac:61: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_REGEX])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^HAVE_BOOST_REGEX$])
-m4trace:configure.ac:61: -1- AH_OUTPUT([HAVE_BOOST_REGEX], [/* define if the Boost::Regex library is available */
+m4trace:configure.ac:74: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_REGEX])
+m4trace:configure.ac:74: -1- m4_pattern_allow([^HAVE_BOOST_REGEX$])
+m4trace:configure.ac:74: -1- AH_OUTPUT([HAVE_BOOST_REGEX], [/* define if the Boost::Regex library is available */
 @%:@undef HAVE_BOOST_REGEX])
-m4trace:configure.ac:61: -1- AC_SUBST([BOOST_REGEX_LIB])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
-m4trace:configure.ac:61: -1- AC_SUBST([BOOST_REGEX_LIB])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
-m4trace:configure.ac:61: -1- AC_SUBST([BOOST_REGEX_LIB])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
-m4trace:configure.ac:62: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_PROGRAM_OPTIONS])
-m4trace:configure.ac:62: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS$])
-m4trace:configure.ac:62: -1- AH_OUTPUT([HAVE_BOOST_PROGRAM_OPTIONS], [/* define if the Boost::PROGRAM_OPTIONS library is available */
+m4trace:configure.ac:74: -1- AC_SUBST([BOOST_REGEX_LIB])
+m4trace:configure.ac:74: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
+m4trace:configure.ac:74: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
+m4trace:configure.ac:74: -1- AC_SUBST([BOOST_REGEX_LIB])
+m4trace:configure.ac:74: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
+m4trace:configure.ac:74: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
+m4trace:configure.ac:74: -1- AC_SUBST([BOOST_REGEX_LIB])
+m4trace:configure.ac:74: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
+m4trace:configure.ac:74: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
+m4trace:configure.ac:75: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_PROGRAM_OPTIONS])
+m4trace:configure.ac:75: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS$])
+m4trace:configure.ac:75: -1- AH_OUTPUT([HAVE_BOOST_PROGRAM_OPTIONS], [/* define if the Boost::PROGRAM_OPTIONS library is available */
 @%:@undef HAVE_BOOST_PROGRAM_OPTIONS])
-m4trace:configure.ac:62: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
-m4trace:configure.ac:62: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
-m4trace:configure.ac:62: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
-m4trace:configure.ac:62: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
-m4trace:configure.ac:62: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
-m4trace:configure.ac:62: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
-m4trace:configure.ac:62: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
-m4trace:configure.ac:62: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
-m4trace:configure.ac:62: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
-m4trace:configure.ac:63: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_IOSTREAMS])
-m4trace:configure.ac:63: -1- m4_pattern_allow([^HAVE_BOOST_IOSTREAMS$])
-m4trace:configure.ac:63: -1- AH_OUTPUT([HAVE_BOOST_IOSTREAMS], [/* define if the Boost::IOStreams library is available */
+m4trace:configure.ac:75: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:75: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:75: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.ac:75: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:75: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:75: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.ac:75: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:75: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:75: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.ac:76: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_IOSTREAMS])
+m4trace:configure.ac:76: -1- m4_pattern_allow([^HAVE_BOOST_IOSTREAMS$])
+m4trace:configure.ac:76: -1- AH_OUTPUT([HAVE_BOOST_IOSTREAMS], [/* define if the Boost::IOStreams library is available */
 @%:@undef HAVE_BOOST_IOSTREAMS])
-m4trace:configure.ac:63: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
-m4trace:configure.ac:63: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
-m4trace:configure.ac:63: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
-m4trace:configure.ac:63: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
-m4trace:configure.ac:63: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
-m4trace:configure.ac:63: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
-m4trace:configure.ac:63: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
-m4trace:configure.ac:63: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
-m4trace:configure.ac:63: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
-m4trace:configure.ac:65: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [./lib/autoconf/general.m4:3010: AC_CHECK_FILE is expanded from...
-configure.ac:65: the top level])
-m4trace:configure.ac:65: -1- AC_SUBST([PATCH])
-m4trace:configure.ac:65: -1- AC_SUBST_TRACE([PATCH])
-m4trace:configure.ac:65: -1- m4_pattern_allow([^PATCH$])
-m4trace:configure.ac:65: -1- AC_SUBST([TAR])
-m4trace:configure.ac:65: -1- AC_SUBST_TRACE([TAR])
-m4trace:configure.ac:65: -1- m4_pattern_allow([^TAR$])
-m4trace:configure.ac:65: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [./lib/autoconf/general.m4:3010: AC_CHECK_FILE is expanded from...
+m4trace:configure.ac:76: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:76: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:76: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.ac:76: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:76: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:76: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.ac:76: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:76: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:76: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.ac:78: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [./lib/autoconf/general.m4:3010: AC_CHECK_FILE is expanded from...
+configure.ac:78: the top level])
+m4trace:configure.ac:78: -1- AC_SUBST([PATCH])
+m4trace:configure.ac:78: -1- AC_SUBST_TRACE([PATCH])
+m4trace:configure.ac:78: -1- m4_pattern_allow([^PATCH$])
+m4trace:configure.ac:78: -1- AC_SUBST([TAR])
+m4trace:configure.ac:78: -1- AC_SUBST_TRACE([TAR])
+m4trace:configure.ac:78: -1- m4_pattern_allow([^TAR$])
+m4trace:configure.ac:78: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [./lib/autoconf/general.m4:3010: AC_CHECK_FILE is expanded from...
 lib/m4sugar/m4sh.m4:692: _AS_IF_ELSE is expanded from...
 lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
 ./lib/autoconf/general.m4:3010: AC_CHECK_FILE is expanded from...
-configure.ac:65: the top level])
-m4trace:configure.ac:81: -1- AC_CONFIG_SUBDIRS([lib/libnids-1.21_patched])
-m4trace:configure.ac:81: -1- AC_SUBST([subdirs], ["$subdirs lib/libnids-1.21_patched"])
-m4trace:configure.ac:81: -1- AC_SUBST_TRACE([subdirs])
-m4trace:configure.ac:81: -1- m4_pattern_allow([^subdirs$])
-m4trace:configure.ac:85: -1- AC_SUBST([PYTHONCODEDIR])
-m4trace:configure.ac:85: -1- AC_SUBST_TRACE([PYTHONCODEDIR])
-m4trace:configure.ac:85: -1- m4_pattern_allow([^PYTHONCODEDIR$])
-m4trace:configure.ac:90: -1- AC_SUBST([PYTHONSUBDIR])
-m4trace:configure.ac:90: -1- AC_SUBST_TRACE([PYTHONSUBDIR])
-m4trace:configure.ac:90: -1- m4_pattern_allow([^PYTHONSUBDIR$])
-m4trace:configure.ac:93: -1- AC_CONFIG_FILES([Makefile src/Makefile python/Makefile ])
-m4trace:configure.ac:93: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
-You should run autoupdate.], [])
-m4trace:configure.ac:93: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:93: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:93: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:93: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:93: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:93: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:93: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:93: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:93: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:93: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:93: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:93: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+configure.ac:78: the top level])
+m4trace:configure.ac:94: -1- AC_CONFIG_SUBDIRS([lib/libnids-1.21_patched])
+m4trace:configure.ac:94: -1- AC_SUBST([subdirs], ["$subdirs lib/libnids-1.21_patched"])
+m4trace:configure.ac:94: -1- AC_SUBST_TRACE([subdirs])
+m4trace:configure.ac:94: -1- m4_pattern_allow([^subdirs$])
+m4trace:configure.ac:98: -1- AC_SUBST([PYTHONCODEDIR])
+m4trace:configure.ac:98: -1- AC_SUBST_TRACE([PYTHONCODEDIR])
+m4trace:configure.ac:98: -1- m4_pattern_allow([^PYTHONCODEDIR$])
+m4trace:configure.ac:103: -1- AC_SUBST([PYTHONSUBDIR])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([PYTHONSUBDIR])
+m4trace:configure.ac:103: -1- m4_pattern_allow([^PYTHONSUBDIR$])
+m4trace:configure.ac:106: -1- AC_CONFIG_FILES([Makefile src/Makefile python/Makefile ])
+m4trace:configure.ac:107: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:107: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:107: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:107: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:107: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:107: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:107: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:107: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:107: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:107: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:107: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:107: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:107: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
