--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+justniffer (0.5.16) jammy; urgency=low
+  * handle truncated connection
+
+ -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 30 September 2024 23:20:00 +0050
+
 justniffer (0.5.15) wily; urgency=low
   * force read pcap file flag, inline functions in libnids removed
 
