--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-justniffer (0.5.17) noble; urgency=low
-  * handle truncated connection
+justniffer (0.5.17) jammy; urgency=low
+  * bash completion and new headers
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 18 Jan 2025 21:10:00 +0100
+ -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 22 Jan 2025 23:10:00 +0100
 
 justniffer (0.5.16.noble) noble; urgency=low
   * handle truncated connection
