--- a/justniffer.8
+++ b/justniffer.8
@@ -1,11 +1,21 @@
-.TH JUSTNIFFER 8 "Jan 18, 2025" "" ""
+.TH JUSTNIFFER 8 "March 22, 2025" "" ""
 .SH NAME
 \fBjustniffer \fP- tcp flow sniffer
 \fB
 .SH SYNOPSIS
 .nf
 .fam C
-\fBjustniffer\fP [ [\fB-i\fP \fBinterface\fP] or [\fB-f\fP <tcpdump file>] ] [\fB-p\fP <packet filter>] [\fB-u\fP or \fB-x\fP] [ \fB-r\fP or \fB-l\fP <log format> or \fB-a\fP <log format>] [\fB-c\fP <config file>]  [\fB-e\fP <external program>]  [\fB-U\fP <user> ]  [\fB-n\fP <not_found_string> ]  [\fB-d\fP <max concurrent hosts for fragmented ip> ] [\fB-s\fP <max concurrent tcp streams> ]  [\fB-F\fP]  
+\fBjustniffer\fP  [ [\fB-i\fP \fBinterface\fP] or [\fB-f\fP <tcpdump file>] ] 
+            [\fB-p\fP <packet filter>] 
+            [\fB-u\fP or \fB-x\fP]
+            [\fB-r\fP or \fB-l\fP <log format> or \fB-a\fP <log format>]
+            [\fB-c\fP <config file>]
+            [\fB-e\fP <external program>]
+            [\fB-U\fP <user> ]
+            [\fB-n\fP <not_found_string> ]
+            [\fB-d\fP <max concurrent hosts for fragmented ip> ]
+            [\fB-s\fP <max concurrent tcp streams> ]
+            [\fB-F\fP]  
 .fam T
 
 \fBExamples:\fP 
@@ -27,15 +37,22 @@
 
 .fi
 .SH DESCRIPTION
- \fBjustniffer\fP captures reassembles and reorders TCP packets, performs IP packet defragmentation and displays the tcp flow or part of it.
- It is useful for logging network traffic in a 'standard' (web server like) or in a customized way.
- It can log network services performances (e.g. web server response time , application server keep alive behaviour, etc.) .
- Output format can be customized using the log format option \fB-l\fP (see \fBFORMAT KEYWORDS\fP). 
- Most of them can be used for retrieving HTTP protocol informations. See \fBEXAMPLES\fP
+\fBjustniffer\fP captures reassembles and reorders TCP packets, performs IP packet defragmentation and displays the tcp
+.br
+flow or part of it. It is useful for logging network traffic in a 'standard' (web server like) or in a customized way.
+.br
+It can log network services performances (e.g. web server response time, application server keep alive behaviour, etc.).
+.br
+Output format can be customized using the log format option \fB-l\fP (see \fBFORMAT KEYWORDS\fP). Most of them can be
+.br
+used for retrieving HTTP protocol informations. See \fBEXAMPLES\fP.
+
 
 .SH TRACKING PERFORMANCES
 
- The main feature of \fBjustniffer\fP is to analize network traffic to monitor performances. The perfomance related keywords are:
+ The main feature of \fBjustniffer\fP is to analize network traffic to monitor performances. 
+.br
+ The perfomance related keywords are:
   %session.time
     %connection.time
     %idle.time.0
@@ -98,16 +115,30 @@ Example: justniffer -i eth0
 .TP
 .B
 \fB-f\fP or \fB--filecap\fP=<file>
-tcpdump file to read from (for offline network traffic processing). It must be a pcap file (produced by network capture programs such as tcpdump or wireshark)
-\fBWARNING\fP: justniffer needs a complete dump, usually, sniffers collect just the few first (96) bytes per packet. (when using tcpdump you must specify "-s 0" option. Example: tcpdump -i eth0 -s 0 -w /tmp/file.cap)
+tcpdump file to read from (for offline network traffic processing).
+.br
+It must be a pcap file (produced by network capture programs such as tcpdump or wireshark)
+.br
+\fBWARNING\fP: justniffer needs a complete dump, usually, sniffers collect just the few first (96) bytes per packet.
+.br
+(when using tcpdump you must specify "-s 0" option. Example: tcpdump -i eth0 -s 0 -w /tmp/file.cap)
 .TP
 Example: justniffer -f /tmp/file.cap
 .TP
 .B
 \fB-F\fP or \fB--force-read-pcap\fP
-Force the reading of a pcap file also if captured with truncated packets (for example when using tcpdump without the "-s 0" option)
+Force the reading of a pcap file also if captured with truncated packets 
+.br
+(for example when using tcpdump without the "-s 0" option)
 .TP
 .B
+\fB-m\fP or \fB--capture-in-the-middle\fP
+Captures and reconstructs TCP streams in the middle (even without the initial connection).
+.br
+\fBWARNING\fP: it may yield unexpected results.
+.TP
+.B
+
 \fB-p\fP or \fB--packet-filter\fP=<filter>
 packet filter (pcap filter syntax) (see \fBpcap-filter\fP(7))
 .TP
@@ -130,8 +161,12 @@ Examples:
 .TP
 .B
 \fB-l\fP or \fB--log-format\fP=<format>
-log format. You can specify the output string format containing reserved keyword that will be replaced with the proper value (see \fBFORMAT KEYWORDS\fP). If missing, the CLF (Common Log Format, used by 
-almost all web servers) is used as default.
+log format. You can specify the output string format containing reserved keyword that will be replaced with the proper value 
+.br
+(see \fBFORMAT KEYWORDS\fP). 
+.br
+If missing, the CLF (Common Log Format, used by  almost all web servers) is used as default.
+.br
 "%source.ip - - [%request.timestamp(%d/%b/%Y:%T %z)] \"%request.line\" %response.code %response.header.content-length \"%request.header.referer\" \"%request.header.user-agent)\""
 .TP
 Example: justniffer -i eth0 -l "\\"%request.line\\"%tab%response.time"
@@ -359,6 +394,10 @@ is replaced by the protocolo (e.g. HTTP/1.0, HTTP/1.1)
 is replaced by the result of the specified regular expression applied on the whole request [Perl regular expression syntax, see \fBperlre\fP(1) or \fBperl\fP(1)]. The most nested subgroup is returned 
 .TP
 .B
+%request.body
+is replaced by the request body
+.TP
+.B
 %request.header
 is replaced by the request header (it is multiline)
 .TP
@@ -519,6 +558,10 @@ is replaced by the reponse protocol
 .B
 %response.code
 is replaced by the response code (e.g. 200, 404, 500, etc.)
+.TP
+.B
+%response.body
+is replaced by the response body
 .TP
 .B
 %response.message
