parametrized Docker image source

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-justniffer (0.5.21.noble) noble; urgency=low
+justniffer (0.5.21) noble; urgency=low
   * capture in the middle
 
  -- Oreste Notelli <oreste.notelli@gmail.com>  Tue, 01 Apr 2025 22:34:00 +0100
