timestamp format fixed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,6 @@
+justniffer (0.5.23.bookworm) bookworm; urgency=low
+  * new timestamp format fixed
+
 justniffer (0.5.22.bookworm) bookworm; urgency=low
   * new timestamp format
 
@@ -6,7 +9,7 @@ justniffer (0.5.22.bookworm) bookworm; urgency=low
 justniffer (0.5.19.noble) noble; urgency=low
   * capture in the middle
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 22 Mar 2025 18:00:00 +0100
+ -- Oreste Notelli <oreste.notelli@gmail.com>  Tue, 01 Apr 2025 22:34:00 +0100
 
 justniffer (0.5.18.noble) noble; urgency=low
   * bash completion and new headers
