--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
+justniffer (0.6.5.noble) noble; urgency=low
+  * compiled with python integration 
+
+  -- Oreste Notelli <oreste.notelli@gmail.com>  Fri, 09 May 2025 18:30:00 +0200
+
 justniffer (0.6.2.jammy) jammy; urgency=low
   * python on_close method: Added 'ip' and 'port' arguments for the peer that closed the connection
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Fri, 09 May 2025 00:36:00 +0200
-
-justniffer (0.6.2.jammy) jammy; urgency=low
-  * python on_close method: Added 'ip' and 'port' arguments for the peer that closed the connection
+  -- Oreste Notelli <oreste.notelli@gmail.com>  Fri, 09 May 2025 18:30:00 +0200
 
 justniffer (0.6.1.jammy) jammy; urgency=low
   * python integration 
@@ -15,78 +17,78 @@ justniffer (0.5.23.bookworm) bookworm; urgency=low
 justniffer (0.5.22.bookworm) bookworm; urgency=low
   * new timestamp format
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Tue, 15 Apr 2025 22:19:00 +0200
+-- Oreste Notelli <oreste.notelli@gmail.com>  Tue, 15 Apr 2025 22:19:00 +0200
 
 justniffer (0.5.19.noble) noble; urgency=low
   * capture in the middle
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Tue, 01 Apr 2025 22:34:00 +0100
+-- Oreste Notelli <oreste.notelli@gmail.com>  Tue, 01 Apr 2025 22:34:00 +0100
 
 justniffer (0.5.18.noble) noble; urgency=low
   * bash completion and new headers
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 22 Jan 2025 23:10:00 +0100
+-- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 22 Jan 2025 23:10:00 +0100
 
 justniffer (0.5.16.noble) noble; urgency=low
   * handle truncated connection
 
- -- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 30 Sep 2024 23:20:00 +0050
+-- Oreste Notelli <oreste.notelli@gmail.com>  Mon, 30 Sep 2024 23:20:00 +0050
 
 justniffer (0.5.15) wily; urgency=low
   * force read pcap file flag, inline functions in libnids removed
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 21 Mar 2016 18:30:00 +0050
+-- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 21 Mar 2016 18:30:00 +0050
 
 justniffer (0.5.14) wily; urgency=low
   * timedout event added
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 10 Mar 2016 18:30:00 +0050
+-- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 10 Mar 2016 18:30:00 +0050
 
 justniffer (0.5.11.quantal) quantal; urgency=low
   * Fixes for python 2.7
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Tue, 16 October 2011 18:55:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Tue, 16 October 2011 18:55:00 +0100
 
 justniffer (0.5.10) natty; urgency=low
   * -F option added, to force the reading pcap files with truncated packets
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Tue, 12 September 2011 10:42:00 +0100
- 
+-- Oreste Notelli <oreste.notelli@plecno.com>  Tue, 12 September 2011 10:42:00 +0100
+
 justniffer (0.5.9) unstable; urgency=high
   * right configuration for tcp streams limit of libnids (thanks to Benet Leong's contribution)
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Tue, 2 August 2011 12:24:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Tue, 2 August 2011 12:24:00 +0100
 
 justniffer (0.5.8) lucid; urgency=low
   * fixed patch libnids (bug introduced in 0.5.7)
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 8 September 2010 18:30:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 8 September 2010 18:30:00 +0100
 
 justniffer (0.5.7) karmic; urgency=low
   * fixed libnids for gcc 4.4
   
- -- Oreste Notelli <oreste.notelli@plecno.com>  Sat, 27 March 2010 22:06:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Sat, 27 March 2010 22:06:00 +0100
 
 justniffer (0.5.6) jaunty; urgency=low
   * forced flush on standard output whenever an new line is written 
   * close_originator handler fixed
   * lintian errors fixed
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 03 July 2009 10:30:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 03 July 2009 10:30:00 +0100
 
 justniffer (0.5.5) unstable; urgency=low
   * improved performances keywords adding a "not applicable string" settable by
     optional parameter
   * documentation updated for enhancement provided from version (0.5.3)
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 29 June 2009 13:30:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 29 June 2009 13:30:00 +0100
 
 justniffer (0.5.4) unstable; urgency=high
   * fixed request.header.* and response.header.* keywords bug
   * fixed help options
   * added connection.timestamp2 request.timestamp2 response.timestamp2 keywords
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 26 June 2009 13:30:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 26 June 2009 13:30:00 +0100
 
 justniffer (0.5.3) unstable; urgency=low
   * fixed %source.ip , %dest.ip , %source.port, %dest.port
@@ -96,12 +98,12 @@ justniffer (0.5.3) unstable; urgency=low
   * added -x encoding for unprintable chars
   * added "not found string" for request.header.* and response.header.* keywords
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 25 June 2009 16:30:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 25 June 2009 16:30:00 +0100
 
 justniffer (0.5.2) unstable; urgency=high
   * fixed default log format
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 1 June 2009 16:30:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 1 June 2009 16:30:00 +0100
 
 justniffer (0.5.1) unstable; urgency=low
   * added connection.timestampdebian-rules-ignores-make-clean-error
@@ -111,23 +113,23 @@ justniffer (0.5.1) unstable; urgency=low
   * more adherence to RFC 2616: looking for headers in case insesitive mode
   * new HTTP headers added
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 1 June 2009 15:00:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Mon, 1 June 2009 15:00:00 +0100
 
 justniffer (0.5) unstable; urgency=low
   * added new extension scripts for saving http captured contents
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 27 May 2009 22:00:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 27 May 2009 22:00:00 +0100
 
 justniffer (0.4.1) unstable; urgency=low
   * debianization
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 23 May 2009 18:18:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 23 May 2009 18:18:00 +0100
 
 justniffer (0.4) unstable; urgency=low
   * script extensions option
   * grabbing http example
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 21 Apr 2009 15:14:00 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 21 Apr 2009 15:14:00 +0100
 
 justniffer (0.3) unstable; urgency=low
   * New option --append-log-format
@@ -140,9 +142,9 @@ justniffer (0.3) unstable; urgency=low
         response.time.end
         response.timestamp
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 10 Nov 2008 20:52:44 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 10 Nov 2008 20:52:44 +0100
 
 justniffer (0.2-1) unstable; urgency=low
   * Initial release 
 
- -- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 30 Oct 2008 01:32:23 +0100
+-- Oreste Notelli <oreste.notelli@plecno.com>  Thu, 30 Oct 2008 01:32:23 +0100
